# ec-data-analysis

./: Makefile  README.md  main.py  mypy.ini  pyproject.toml
data/: EC_EV_dataset.xlsx  Pnet.csv
ec_data_analysis/: __init__.py  battery.py  constants.py  ec_dataset.py  interactive_toolv1.py  main.py  market_solution.py  plot_utils.py  report.py
ec_data_analysis/report_texts/: chargeRatio.md  dischargeRatio.md  energyBreakdown.md  energyBreakdownWithBattery.md  introduction.md  keyStats.md  statsWithBattery.md  unfairBuyRatio.md  unfairSellRatio.md
report_texts/: buyRatio.md  introduction.md  sellRatio.md  statsWithBattery.md  supplyDemandCapacityCurves.md
