[tool.poetry]
name = "ec-data-analysis"
version = "0.1.0"
description = "Manages Energy Community Datasets with support for computing optimal energy distribution, visualization and key statistics."
authors = ["Sascha Kehrli <skehrli@ethz.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
networkx = "^3.3"
scipy = "^1.14.1"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.poetry.scripts]
run = "main:main"
format = "black ."
typecheck = "mypy ."
