[tool.poetry]
name = "ec-data-analysis"
version = "0.9.0"
description = "Manages Energy Community Datasets with support for computing optimal energy distribution, visualization and key statistics."
authors = ["Sascha Kehrli <skehrli@ethz.ch>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/skehrli/ec-data-analysis"
include = ["ec_data_analysis/report_texts/*"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
networkx = "^3.3"
openpyxl = "^3.1.5"
markdown-pdf = "^1.3"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
